--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 </head>
 <audio controls="controls" style="display: none;"></audio>
 
-<body>
-  <div class="boxHead"></div>
-  <div align="center">
+<body> 
+  <div align="center" class="logoAling">
+    <div style="margin-top: -15%;">
+      <img src="imgs/logo.jpeg"
+    </div>
     <div id="wrap" align="center">
       <div class="loader"></div>
     </div>
@@ -40,6 +42,11 @@
     </div>
   </div>
  
+<div class="footer">
+    <i class="material-icons">play_arrow</i>
+
+</div>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125810330-1"></script>
   <script type="text/javascript" src="./js/libs/materialize.js"></script>
   <script type="text/javascript" src="./js/libs/jquery.js"></script>
