--- a/resultado.html
+++ b/resultado.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,25 +15,33 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>  
+</head>
+
 <body>
-<div class="boxHead z-depth-1"></div>
-<div align="center" >
-	<div id="wrap" align="center">
-		<div class="loader"></div>
-	</div>
-</div>  
-<div class="boxVotos"></div>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125810330-1"></script>
-<script type="text/javascript" src="./js/libs/materialize.js"></script>
-<script type="text/javascript" src="./js/libs/jquery.js"></script>
-<script type="text/javascript" src="./js/materializeInit.js"></script>
-<script type="text/javascript" src="./js/GAnalytics.js"></script>
-<script type="text/javascript" src="./js/front.js"></script>
-<script type="text/javascript" src="./js/mp3Play.js"></script>
-<script type="text/javascript" src="./js/init.js"></script>
-<script type="text/javascript">
-initResultado()
-</script>
+    <div class="boxHead z-depth-1">
+        <div class="title"></div>
+        <div>
+            <a href="#!" class="btn-flat z-depth-1 btnBranco">VER RESULTADO <i class="material-icons">sentiment_neutral</i>
+            </a>
+        </div>
+    </div>
+    <div align="center">
+        <div id="wrap" align="center">
+            <div class="loader"></div>
+        </div>
+    </div>
+    <div class="boxVotos"></div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125810330-1"></script>
+    <script type="text/javascript" src="./js/libs/materialize.js"></script>
+    <script type="text/javascript" src="./js/libs/jquery.js"></script>
+    <script type="text/javascript" src="./js/materializeInit.js"></script>
+    <script type="text/javascript" src="./js/GAnalytics.js"></script>
+    <script type="text/javascript" src="./js/front.js"></script>
+    <script type="text/javascript" src="./js/mp3Play.js"></script>
+    <script type="text/javascript" src="./js/init.js"></script>
+    <script type="text/javascript">
+        initResultado()
+    </script>
 </body>
+
 </html>
