--- a/resultado.html
+++ b/resultado.html
@@ -16,12 +16,14 @@
     <link rel="stylesheet" type="text/css" href="./css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+<audio controls="controls" style="display: none;"></audio>
 
 <body>
     <div class="boxHead z-depth-1">
         <div class="title"></div>
         <div>
-            <a href="#!" class="btn-flat z-depth-1 btnBranco">VER RESULTADO <i class="material-icons">sentiment_neutral</i>
+            <a href="#!" id="verResultado" class="btn-flat z-depth-1 btnBranco">
+                VER RESULTADO <i class="material-icons">sentiment_neutral</i>
             </a>
         </div>
     </div>
@@ -36,9 +38,10 @@
     <script type="text/javascript" src="./js/libs/jquery.js"></script>
     <script type="text/javascript" src="./js/materializeInit.js"></script>
     <script type="text/javascript" src="./js/GAnalytics.js"></script>
+    <script type="text/javascript" src="./js/init.js"></script>
     <script type="text/javascript" src="./js/front.js"></script>
     <script type="text/javascript" src="./js/mp3Play.js"></script>
-    <script type="text/javascript" src="./js/init.js"></script>
+ 
     <script type="text/javascript">
         initResultado()
     </script>
