--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body> 
   <div align="center" class="logoAling">
-    <div style="margin-top: -15%;">
+    <div > 
+      <!-- style="margin-top: -15%;" -->
       <img src="imgs/logo.jpeg"
     </div>
     <div id="wrap" align="center">
