--- a/resultado.html
+++ b/resultado.html
@@ -22,7 +22,7 @@
     <div class="boxHead z-depth-1">
         <div class="title"></div>
         <div>
-            <a href="#!" id="verResultado" class="btn-flat z-depth-1 btnBranco">
+            <a href="#!" id="verResultado" class="btn-flat z-depth-1 btnResultado">
                 VER RESULTADO <i class="material-icons">sentiment_neutral</i>
             </a>
         </div>
