--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
 <body> 
   <div align="center" class="logoAling">
+    <!-- 
     <div > 
-      <!-- style="margin-top: -15%;" -->
-      <img src="imgs/logo.jpeg"
+      <img src="imgs/logo.jpeg" />
     </div>
+    --->
     <div id="wrap" align="center">
       <div class="loader"></div>
     </div>
@@ -43,10 +44,6 @@
     </div>
   </div>
  
-<div class="footer">
-    <i class="material-icons">play_arrow</i>
-
-</div>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125810330-1"></script>
   <script type="text/javascript" src="./js/libs/materialize.js"></script>
