--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 <body>
   <div align="center" class="logoAling">
 
-    <div>
-      <img src="imgs/logo.jpeg" />
+    <div class="logo">
+      <b>Datafoda-se</b>
+      <small>INSTITUTO DE PESQUISAS</small>
+      <!-- <img src="imgs/logo.jpeg" /> -->
     </div>
 
   </div>
