feat: negative votos

--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
 <audio controls="controls" style="display: none;"></audio>
 
 <body>
+  
   <div align="center" class="logoAling">
 
     <div class="logo">
       <b>Datafoda-se</b>
       <small>INSTITUTO DE PESQUISAS</small>
       <!-- <img src="imgs/logo.jpeg" /> -->
+      <h3><b>Categoria Melhor Fantasia</b></h3>
     </div>
 
+  
+
   </div>
+  
 
   <div id="wrap" align="center">
     <div class="loader"></div>
