--- a/resultado.html
+++ b/resultado.html
@@ -20,14 +20,22 @@
 
 <body>
     <div class="boxHead z-depth-1">
-        <div class="title"></div>
+        <div class="aling-flex">
+            <h3><b>Categoria Melhor Fantasia</b></h3>
+            <div class="title"></div>
+        </div>
         <div>
             <a href="#!" id="verResultado" class="btn-flat z-depth-1 btnResultado">
                 VER RESULTADO <i class="material-icons">sentiment_neutral</i>
             </a>
         </div>
     </div>
+    
     <div align="center">
+        <div id="wrap_roulete" align="center">
+   
+        </div>
+        
         <div id="wrap" align="center">
             <div class="loader"></div>
         </div>
